
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef int mach_port_t ;
typedef scalar_t__ kern_return_t ;


 scalar_t__ IOConnectAddClient (int,int) ;
 scalar_t__ KERN_SUCCESS ;
 int N_THREADS ;
 int get_user_client (char*,int) ;
 int gl_context ;
 int go ;
 int printf (char*,...) ;
 int pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;

int main(int argc, char** argv){

  gl_context = get_user_client("IntelAccelerator", 1);
  printf("gl_context: %x\n", gl_context);


  mach_port_t shared = get_user_client("IntelAccelerator", 6);
  printf("shared: %x\n", shared);


  kern_return_t err = IOConnectAddClient(gl_context, shared);
  if (err != KERN_SUCCESS){
   printf("IOConnectAddClient error: %x\n", err);
   return 0;
  }

  printf("added client to the shared UC\n");


  pthread_t threads[2];

  for (int i = 0; i < 2; i++) {
    pthread_create(&threads[i], ((void*)0), go, ((void*)0));
  }

  pthread_join(threads[0], ((void*)0));


  return 0;


}
